tenants/platform/argocd/overlays/dev/workload/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - argocd.workload.teknologik8s.nl
    secretName: argocd-tls
  rules:
  - host: argocd.workload.teknologik8s.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
